[feature] - change filter by query for shift and timesheets
